lb2.tf
# Tạo Load Balancer nội bộ ProductLB và các cấu hình liên quan như frontend IP, backend pool, health probe và quy tắc.
resource "azurerm_lb" "ProductLB2" {
  name                = "ProductLB2"
  location            = azurerm_resource_group.CyberWatch.location
  resource_group_name = azurerm_resource_group.CyberWatch.name
  sku                 = "Standard"

  frontend_ip_configuration {
    name                          = "LBFrontend2"
    subnet_id                     = azurerm_subnet.ProductSubnet2.id
    private_ip_address_allocation = "Dynamic"
  }
}
# Load Balancer Backend Pool
resource "azurerm_lb_backend_address_pool" "bpepool2" {
  loadbalancer_id = azurerm_lb.ProductLB2.id
  name            = "BackEndAddressPool"
}

# Load Balancer Rule (HTTP)
resource "azurerm_lb_rule" "ProductLBRule2" {
  name                           = "HTTPRule"
  loadbalancer_id                = azurerm_lb.ProductLB2.id
  protocol                       = "Tcp"
  frontend_port                  = 80  
  backend_port                   = 80
  frontend_ip_configuration_name = "LBFrontend2"
  backend_address_pool_ids       = [azurerm_lb_backend_address_pool.bpepool2.id]
  probe_id                       = azurerm_lb_probe.ProductLBHealthProbe2.id
}

# Health Probe for LB
resource "azurerm_lb_probe" "ProductLBHealthProbe2" {
  loadbalancer_id     = azurerm_lb.ProductLB2.id
  name                = "HealthProbe"
  protocol            = "Http"
  port                = 80
  request_path        = "/"
  interval_in_seconds = 5
  number_of_probes    = 2
}
